--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "mongoose-unique-validator": "^3.0.0"
   }
 }
