--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "reselect": "^4.1.5",
     "sass": "^1.51.0",
     "uuid": "^8.3.2",
+    "victory": "^36.5.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
